--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ figcaption {
   font-size: 0.8em;
 }
 
-/*#featured-property {*/
-/*  text-align: center;*/
-/*  width: 800px;*/
-/*}*/
+#featured-property {
+  text-align: center;
+  width: 800px;
+}
