--- a/style.css
+++ b/style.css
@@ -27,7 +27,10 @@ figcaption {
   font-size: 0.8em;
 }
 
-#featured-property p{
+#featured-property p {
   text-align: center;
   width: 800px;
+  margin: 0 auto;
 }
+
+#details
