Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ nav {
 
 nav a {
   padding: 0 10px;
-  background-color: #de4463;
+  background-color: #99f3bd;
 }
 
 figcaption {
@@ -36,5 +36,6 @@ figcaption {
 #details div {
   display: block;
   float: left;
+  background-color: 
   
 }
